# ReactorMaker

./: .gitignore  README.md  pyproject.toml
datas/: example.toml  example.yaml
dependencies/error/: error.py
docs/: index.md
docs/getting-started/: installation.md
docs/user-guide/: cli.md  gui.md  index.md
reactor_maker.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/: main.py  reactor_maker.py
src/reactor_maker/: __init__.py  application.py  cli.py  core.py  geometry.py  gui.py  mesh.py  sketcher.py  text_redirector.py
src/reactor_maker/engine/: __init__.py  core.py  geometry.py  mesh.py  sketcher.py
src/reactor_maker/vector/: __init__.py  vector.py
