[project]
name = "reactor-maker"
version = "0.1.0"
description = "Create and mesh a reactor"

[project.optional-dependencies]
dev = [
    "black>=22.0",
]

[tool.setuptools.packages.find]
where = ["dependencies", "src"]

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = true


